--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap');
         body { 
             font-family: 'Plus Jakarta Sans', sans-serif;
-            overscroll-behavior-y: contain;
+            background-color: #f1f5f9;
+            margin: 0;
+            padding: 0;
         }
         .glass-effect {
             background: rgba(255, 255, 255, 0.8);
@@ -30,17 +32,19 @@
 <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
   }
 }
 </script>
 </head>
-<body class="bg-slate-100 text-slate-900">
+<body>
     <div id="root"></div>
-    <!-- Ponto de entrada crucial para o funcionamento da aplicação -->
-    <script type="module" src="./index.tsx"></script>
+    <!-- O Vite usará este arquivo como ponto de entrada -->
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
