--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -17,6 +16,7 @@
             background-color: #f1f5f9;
             margin: 0;
             padding: 0;
+            -webkit-tap-highlight-color: transparent;
         }
         .glass-effect {
             background: rgba(255, 255, 255, 0.8);
@@ -32,19 +32,19 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
-    <!-- O Vite usará este arquivo como ponto de entrada -->
+    <!-- O Vite usará este arquivo como ponto de entrada para transformar o JSX/TSX -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
