--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         body { 
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #cbd5e1;
+            background-color: #f1f5f9;
             margin: 0;
             padding: 0;
             -webkit-tap-highlight-color: transparent;
@@ -32,28 +32,32 @@
         #root {
             height: 100dvh;
             width: 100%;
+            max-width: 390px;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            background-color: #ffffff;
+            position: relative;
+            box-shadow: 0 0 1px rgba(0,0,0,0.1), 0 25px 50px -12px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
         }
 
         .glass-effect {
-            background: rgba(255, 255, 255, 0.98);
+            background: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
         }
 
         @keyframes slideUp {
-            from { transform: translateY(100%); }
-            to { transform: translateY(0); }
+            from { transform: translateY(100%); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
         }
-        .animate-slide-up { animation: slideUp 0.4s cubic-bezier(0.16, 1, 0.3, 1); }
+        .animate-slide-up { animation: slideUp 0.5s cubic-bezier(0.16, 1, 0.3, 1); }
 
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
         }
-        .animate-fade-in { animation: fadeIn 0.3s ease-out; }
+        .animate-fade-in { animation: fadeIn 0.4s ease-out; }
 
         .hide-scrollbar {
             -ms-overflow-style: none;
@@ -63,22 +67,42 @@
             display: none;
         }
 
-        /* Suavização de bordas no desktop */
-        @media (min-width: 400px) {
-            #root > div {
+        @media (min-width: 420px) {
+            #root {
                 border-radius: 3rem;
-                height: 94dvh;
-                margin: auto;
+                height: 844px;
+                max-height: 92vh;
+                overflow: hidden;
+                border: 8px solid #ffffff;
             }
         }
+
+        input, textarea {
+            transition: all 0.2s ease;
+        }
+        input:focus, textarea:focus {
+            box-shadow: 0 0 0 4px rgba(5, 150, 105, 0.05);
+        }
+
+        .nav-indicator {
+            position: absolute;
+            bottom: -6px;
+            width: 4px;
+            height: 4px;
+            background: #059669;
+            border-radius: 50%;
+            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.35.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
