--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         
         :root {
             --emerald-600: #059669;
+            --emerald-500: #10b981;
         }
 
         body { 
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #f1f5f9;
+            background-color: #f8fafc;
             margin: 0;
             padding: 0;
             -webkit-tap-highlight-color: transparent;
@@ -37,27 +38,31 @@
             flex-direction: column;
             background-color: #ffffff;
             position: relative;
-            box-shadow: 0 0 1px rgba(0,0,0,0.1), 0 25px 50px -12px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05), 0 8px 10px -6px rgba(0, 0, 0, 0.05);
             transition: all 0.3s ease;
         }
 
         .glass-effect {
-            background: rgba(255, 255, 255, 0.8);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
+            background: rgba(255, 255, 255, 0.85);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+        }
+
+        .nav-active-glow {
+            box-shadow: 0 0 20px rgba(16, 185, 129, 0.4);
         }
 
         @keyframes slideUp {
-            from { transform: translateY(100%); opacity: 0; }
+            from { transform: translateY(20px); opacity: 0; }
             to { transform: translateY(0); opacity: 1; }
         }
-        .animate-slide-up { animation: slideUp 0.5s cubic-bezier(0.16, 1, 0.3, 1); }
+        .animate-slide-up { animation: slideUp 0.4s cubic-bezier(0.16, 1, 0.3, 1); }
 
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
         }
-        .animate-fade-in { animation: fadeIn 0.4s ease-out; }
+        .animate-fade-in { animation: fadeIn 0.3s ease-out; }
 
         .hide-scrollbar {
             -ms-overflow-style: none;
@@ -69,29 +74,16 @@
 
         @media (min-width: 420px) {
             #root {
-                border-radius: 3rem;
-                height: 844px;
-                max-height: 92vh;
+                border-radius: 2.5rem;
+                height: 800px;
+                max-height: 90vh;
                 overflow: hidden;
-                border: 8px solid #ffffff;
+                border: 6px solid #ffffff;
             }
         }
 
         input, textarea {
             transition: all 0.2s ease;
-        }
-        input:focus, textarea:focus {
-            box-shadow: 0 0 0 4px rgba(5, 150, 105, 0.05);
-        }
-
-        .nav-indicator {
-            position: absolute;
-            bottom: -6px;
-            width: 4px;
-            height: 4px;
-            background: #059669;
-            border-radius: 50%;
-            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
     </style>
     <script type="importmap">
@@ -103,8 +95,8 @@
     "@google/genai": "https://esm.sh/@google/genai@1.35.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
