--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         body { 
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #f8fafc;
+            background-color: #f1f5f9;
             margin: 0;
             padding: 0;
             -webkit-tap-highlight-color: transparent;
@@ -33,23 +33,17 @@
         #root {
             height: 100dvh;
             width: 100%;
-            max-width: 390px;
+            max-width: 414px; /* Tamanho de um iPhone grande */
             display: flex;
             flex-direction: column;
             background-color: #ffffff;
             position: relative;
-            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05), 0 8px 10px -6px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
         }
 
-        .glass-effect {
-            background: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-        }
-
         .nav-active-glow {
-            box-shadow: 0 0 20px rgba(16, 185, 129, 0.4);
+            box-shadow: 0 4px 15px rgba(16, 185, 129, 0.4);
         }
 
         @keyframes slideUp {
@@ -74,16 +68,17 @@
 
         @media (min-width: 420px) {
             #root {
-                border-radius: 2.5rem;
-                height: 800px;
-                max-height: 90vh;
+                border-radius: 3rem;
+                height: 850px;
+                max-height: 95vh;
                 overflow: hidden;
-                border: 6px solid #ffffff;
+                border: 8px solid #ffffff;
             }
         }
 
-        input, textarea {
-            transition: all 0.2s ease;
+        input::placeholder {
+            color: #cbd5e1;
+            font-weight: 500;
         }
     </style>
     <script type="importmap">
@@ -95,8 +90,8 @@
     "@google/genai": "https://esm.sh/@google/genai@1.35.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
